org/retrieves/clevel-09SHZ00000GVgY32AL/unpackaged/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__EffectiveUsageCostTotal__c</fullName>
        <description>Effective Usage Cost Total</description>
        <label>Usage Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUsagePriceTotal__c</fullName>
        <description>Effective Usage Price Total</description>
        <label>Usage Price Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FollowUpTo__c</fullName>
        <description>If this activity is a follow up to a previous activity.</description>
        <label>Follow Up To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FrameContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Frame contract linked to this opportunity</description>
        <label>Frame Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsContractRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if opportunity requires a contract</description>
        <label>Require Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LockedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This indicates if an opportunity is locked by a user.</description>
        <inlineHelpText>This indicates if an opportunity is locked by a user.</inlineHelpText>
        <label>Locked By User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LockedFor__c</fullName>
        <description>This stores the reason for doing lock on the opportunity.</description>
        <inlineHelpText>This stores the reason for doing lock on the opportunity.</inlineHelpText>
        <label>Locked For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Async Operation</fullName>
                </value>
                <value>
                    <fullName>Manual Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberOfContractedMonths__c</fullName>
        <label>Number Of Contracted Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeLoyaltyTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>One Time Loyalty Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeMarginTotal__c</fullName>
        <label>One Time Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal__c</fullName>
        <label>One Time Total</label>
        <summarizedField>OpportunityLineItem.vlocity_cmt__OneTimeTotal__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityMarginTotal__c</fullName>
        <label>Opportunity Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityTotal__c</fullName>
        <formula>vlocity_cmt__OneTimeTotal__c + ( vlocity_cmt__RecurringTotal__c * vlocity_cmt__NumberOfContractedMonths__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderNumber__c</fullName>
        <description>Salesforce sample extension field. Use as desired (unused by Vlocity).</description>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OriginatingChannel__c</fullName>
        <description>Channel can be used to drive Eligibility/Compatibility/Recommendations/Pricing/Other implementations, e.g. Certain Product Bundles are only available on the Web or Call Center channel but not via the Retail and Dealer channels OR A product may have a different price when sold via the Web than sold via the Retail channel, etc.</description>
        <label>Originating Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OriginatingContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to the contract from which this opportunity was created</description>
        <label>Originating Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The referral source of an opportunity</description>
        <label>Referral Source</label>
        <referenceTo>vlocity_cmt__Party__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>vlocity_cmt__PriceList__c</referenceTo>
        <relationshipLabel>Opportunities Using This Price List</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringMarginTotal__c</fullName>
        <label>Recurring Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringTotal__c</fullName>
        <label>Recurring Total</label>
        <summarizedField>OpportunityLineItem.vlocity_cmt__RecurringTotal__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ShippingPostalCode__c</fullName>
        <formula>Account.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ShippingState__c</fullName>
        <formula>Account.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageMarginTotal__c</fullName>
        <description>Usage Margin Total</description>
        <label>Usage Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationDate__c</fullName>
        <description>Date when the validation was last run</description>
        <inlineHelpText>Last validation date</inlineHelpText>
        <label>Validation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationMessage__c</fullName>
        <description>Message from last validation run</description>
        <inlineHelpText>Message from last validation run</inlineHelpText>
        <label>Validation Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationStatus__c</fullName>
        <description>Validation Status</description>
        <inlineHelpText>If an opportunity has been validated, it will show the status Passed or Failed. If no validation has been run yet, it will show Not yet run.</inlineHelpText>
        <label>Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet run</fullName>
                    <default>true</default>
                    <label>Not yet run</label>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Aguardando_Instala_o</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Aguardando instalação</value>
        </filters>
        <label>Aguardando Instalação</label>
        <sharedTo>
            <group>admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todas as oportunidades</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>OportunidadesBackoffice_B2B</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OpportunityNumber__c</columns>
        <columns>NegotiationType__c</columns>
        <columns>ProposalSubmitted__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Cluster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordTypeName__c</field>
            <operation>equals</operation>
            <value>B2B</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Aguardando contrato,Contrato assinado,Aguardando instalação</value>
        </filters>
        <label>Oport. B2B - Aguardando Contrato</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CLevel</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Oportunidades_B2B</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OpportunityNumber__c</columns>
        <columns>NegotiationType__c</columns>
        <columns>ProposalSubmitted__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Cluster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordTypeName__c</field>
            <operation>equals</operation>
            <value>B2B</value>
        </filters>
        <label>Oport. B2B - Todos os registros</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CLevel</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OpportunityApproval_ArquiteturaQueue</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OpportunityNumber__c</columns>
        <columns>NegotiationType__c</columns>
        <columns>ProposalSubmitted__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Cluster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Send4Approval__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Viabilidade e desenho da solução,Validação técnica</value>
        </filters>
        <label>Oport. B2B - Aprovação Arquitetura</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>OpportunityApproval_AuditoriaC2Queue</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OpportunityNumber__c</columns>
        <columns>NegotiationType__c</columns>
        <columns>ProposalSubmitted__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Cluster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Send4Approval__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Aprovação crédito</value>
        </filters>
        <label>Oport. B2B - Aprovação Crédito</label>
        <sharedTo>
            <role>B2B_GeneralDirector</role>
            <role>CLevel</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OpportunityApproval_AuditoriaCQueue</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OpportunityNumber__c</columns>
        <columns>NegotiationType__c</columns>
        <columns>ProposalSubmitted__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Cluster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Send4Approval__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Aprovação comercial</value>
        </filters>
        <label>Oport. B2B - Aprovação Comercial</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>B2B</fullName>
        <active>true</active>
        <businessProcess>B2B</businessProcess>
        <label>B2B</label>
    </recordTypes>
    <recordTypes>
        <fullName>B2C</fullName>
        <active>true</active>
        <businessProcess>B2C</businessProcess>
        <label>B2C</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__MediaCampaign</fullName>
        <active>true</active>
        <businessProcess>vlocity_cmt__AdSales</businessProcess>
        <description>Use the Media Campagin to create Media Campaign and associated Media Plans and Ad Placements.</description>
        <label>Media Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__MobilePhoneOpportunity</fullName>
        <active>true</active>
        <businessProcess>vlocity_cmt__Vlocity Sales Process</businessProcess>
        <description>Mobile Phone Opportunity</description>
        <label>MobilePhoneOpportunity</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>BloqueaEdicaoRelacionados</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
				NOT(ISNEW()),
				OR(
								ISPICKVAL(StageName, &apos;Viabilidade técnica&apos;),
								ISPICKVAL(StageName, &apos;Fechado/Ganho&apos;),
								ISPICKVAL(StageName, &apos;Fechado/Perdido&apos;)
				),
				OR(
								ISCHANGED(ProposalDescription__c),
								ISCHANGED(EconomicGroup__c),
								ISCHANGED(ContractId)  
				)
)</errorConditionFormula>
        <errorMessage>Atenção: não é possível editar os campos &apos;Observações da proposta&apos;, &apos;Grupo econômico&apos; e &apos;Contrato relacionado&apos; nesta fase da Oportunidade.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BloqueiaAlteracaoAguardandoContrato</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    RecordTypeName__c = &apos;B2B&apos;,
				TEXT(StageName) = &apos;Aguardando contrato&apos;,
				NOT(ISCHANGED(StageName)),
				NOT(ISCHANGED(AttachedTerm__c)),
				NOT(Bypass__c),
    NOT(ISCHANGED(Bypass__c)),
				OR(
								ISBLANK(TEXT(ContractStartType__c)),
				    ISBLANK(ContractStartDate__c),
				    ISBLANK(TEXT(ContractEndManual__c)),
								ISBLANK(TEXT(Stage__c)),
								NOT(
				        OR(
								        ISCHANGED(ContractStartType__c),
								        ISCHANGED(ContractStartDate__c),
								        ISCHANGED(ContractEndManual__c),
																ISCHANGED(ContractPendencies__c),
																ISCHANGED(Stage__c)
				        )
				    )
				)
)</errorConditionFormula>
        <errorMessage>Atenção: Durante a fase de &apos;Aguardando contrato&apos;, apenas é permitido editar as informações da seção &apos;Informações do Contrato&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BloqueiaAlteracaoAnaliseCliente</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  RecordTypeName__c = &apos;B2B&apos;,
  NOT(ISNEW()),
  TEXT(StageName) = &apos;Análise cliente&apos;,
  Bypass__c = false,
  NOT(ISCHANGED(Bypass__c)),
  NOT(
    AND(
      NOT(ISCHANGED(StageName)),
      NOT(ISCHANGED(OverallApproval__c)),
      NOT(ISCHANGED(Bypass__c)),
      OR(
        ISCHANGED(CloseDate),
        ISCHANGED(Stage__c),
								ISCHANGED(ProposalSubmitted__c),
        ISCHANGED(Amount),
								ISCHANGED(ContractEndManual__c)
      )
    )
  )
)</errorConditionFormula>
        <errorMessage>Atenção: usuário não possui autorização para manipular o registro nesta fase.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BloqueiaAlteracaoAprovacaoComercial</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    RecordTypeName__c = &apos;B2B&apos;,
				TEXT(StageName) = &apos;Aprovação comercial&apos;,
				NOT(ISCHANGED(StageName)),
				NOT($Permission.SalesManager),
			 NOT(Bypass__c),
    NOT(ISCHANGED(Bypass__c))
)</errorConditionFormula>
        <errorMessage>Atenção: não é possível ao usuário &apos;Vendedor/GR&apos; editar uma Oportunidade/Cotação enquanto o registro está em aprovação.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BloqueiaAlteracaoAprovacaoTecnica</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
				RecordTypeName__c = &apos;B2B&apos;, 
				NOT(ISNEW()),
		  TEXT(StageName) = &apos;Viabilidade e desenho da solução&apos;,
				NOT(ISCHANGED(StageName)),
				NOT(ISCHANGED(SyncedQuoteId)),
				$Permission.Seller,
				NOT(Bypass__c),
				NOT(ISCHANGED(Bypass__c))
)</errorConditionFormula>
        <errorMessage>Atenção: usuário não possui autorização para editar este registro nesta fase</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BloqueiaAlteracaoCluster</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
TEXT($User.Cluster__c) != TEXT(Cluster__c),
TEXT(PRIORVALUE(Cluster__c)) != TEXT(Cluster__c),
NOT(ISBLANK(TEXT(PRIORVALUE(Cluster__c))))
)</errorConditionFormula>
        <errorMessage>Atenção: não é possível criar ou editar registros que não sejam do seu cluster. Contate o administrador para suporte</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BloqueiaAlteracaoContaVendedor</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    RecordTypeName__c = &apos;B2B&apos;,
				NOT(ISNEW()),
    ISCHANGED(AccountId),
				$Permission.SalesmanGR 
)</errorConditionFormula>
        <errorMessage>Atenção: não é possível realizar a alteração da Conta de uma Oportunidade.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BloqueiaAlteracaoManualFase</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
				RecordTypeName__c = &apos;B2B&apos;,
				ISCHANGED(StageName),
				NOT(Bypass__c)
)</errorConditionFormula>
        <errorMessage>Atenção: não é possível editar manualmente a fase do registro.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BloqueiaAlteracaoRevisaoDiretoria</fullName>
        <active>true</active>
        <description>W0382 - impede edicao da Oportunidade enquanto a aprovacao esta com C-Level ou Head.</description>
        <errorConditionFormula>AND(
    RecordTypeName__c = &apos;B2B&apos;,
    NOT(ISNEW()),
    OR(
        ISPICKVAL(ResponsibleTeam__c, &apos;C-Level&apos;),
        ISPICKVAL(ResponsibleTeam__c, &apos;Head&apos;)
    ),
    NOT(ISCHANGED(ResponsibleTeam__c)),
    NOT(Bypass__c),
    NOT(ISCHANGED(Bypass__c))
)</errorConditionFormula>
        <errorMessage>Atencao: a Oportunidade esta em revisao pela diretoria. Enquanto isso, atue apenas no item de aprovacao.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BloqueiaAlteracaoTermoAprovado</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
				RecordTypeName__c = &apos;B2B&apos;,
				TEXT(StageName) = &apos;Contrato assinado&apos;,
				TEXT(PRIORVALUE(StageName)) = &apos;Contrato assinado&apos;,
				NOT(Bypass__c),
    NOT(ISCHANGED(Bypass__c))
)</errorConditionFormula>
        <errorMessage>Atenção: não é possível realizar edições do registro após a Oportunidade ter um termo anexado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BloqueiaAlteracaoTipoNegociacao</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
				RecordTypeName__c = &apos;B2B&apos;,
				NOT(ISPICKVAL(StageName, &apos;Em negociação&apos;)),
				ISCHANGED(NegotiationType__c)
)</errorConditionFormula>
        <errorDisplayField>NegotiationType__c</errorDisplayField>
        <errorMessage>Atenção: não é possível editar o &apos;Tipo de negociação&apos; de uma oportunidade em andamento.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BloqueiaAvancarAnaliseClienteCamposObrig</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
				RecordTypeName__c = &apos;B2B&apos;,
    NOT(ISNEW()),
    PRIORVALUE(StageName) = &apos;Análise cliente&apos;,
    NOT(BaseContractFilled__c),
				ISCHANGED(StageName),
				OR(
				    TEXT(StageName) = &apos;Análise financeira&apos;,
								Text(StageName) = &apos;Validação técnica&apos;
				)
)</errorConditionFormula>
        <errorMessage>Atenção: Necessário preencher os campos obrigatórios da fase &apos;Análise cliente&apos; para avançar a fase.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BloqueiaCamposViabilidadeFechado</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
				OR(
								ISPICKVAL(StageName, &apos;Viabilidade técnica&apos;),
        ISPICKVAL(StageName, &apos;Fechado/Ganho&apos;),
				    ISPICKVAL(StageName, &apos;Fechado/Perdido&apos;)
				),
				OR(
				    ISCHANGED(ProposalDescription__c),
								ISCHANGED(LinkEconomicGroup__c),
								ISCHANGED(RelatedContract__c)
    )
)</errorConditionFormula>
        <errorMessage>Atenção: Não é permitido alterar os campos &apos;Observações da Proposta&apos;, &apos;Vincular ao grupo econômico&apos; ou &apos;Contrato relacionado&apos; nesta fase da Oportunidade</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BloqueiaEdicaoFechadoPerdido</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
    AND(
        NOT(ISNEW()),
				    NOT(ISCHANGED(StageName)),
				    TEXT(StageName) = &apos;Fechado/Perdido&apos;,
				    NOT(Bypass__c),
        NOT(ISCHANGED(Bypass__c))
    ),
    AND(
        NOT(ISNEW()),
        TEXT(PRIORVALUE(StageName)) = &quot;Fechado/Perdido&quot;,
        ISCHANGED(StageName)
    )
)</errorConditionFormula>
        <errorMessage>Atenção: não é possível editar a Oportunidade após ter sido perdida.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BloqueiaEdicaoLeadSource</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT(ISNEW()),
				LeadConverted__c,
				ISCHANGED(LeadSource)
)</errorConditionFormula>
        <errorDisplayField>LeadSource</errorDisplayField>
        <errorMessage>Atenção: o campo &apos;Origem do Lead&apos; não pode ser modificado na Oportunidade.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BloqueiaEdicaoOportunidadeGanha</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
				NOT(ISNEW()),
				NOT(Bypass__c),
				NOT(
        AND(
            ISCHANGED(Bypass__c),
            PRIORVALUE(Bypass__c) = true
        )
    ),
				OR(
								AND(
												TEXT(StageName) = &apos;Instalado&apos;,
												NOT(ISCHANGED(StageName))
								),
								AND(
												TEXT(PRIORVALUE(StageName)) = &quot;Instalado&quot;,
            ISCHANGED(StageName)
								)
				)
)</errorConditionFormula>
        <errorMessage>Atenção: não é possível manipular dados de uma Oportunidade que já está fechada</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ImpedeTrocaProprietario</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISCHANGED(OwnerId),
    RecordTypeName__c = &apos;B2B&apos;,
    NOT(
        OR(
            $Profile.Name = &quot;Admin Acesso&quot;,
            $Profile.Name = &quot;Administrador do sistema&quot;,
            $Profile.Name = &quot;B2B - Backoffice&quot;
        )
    )
)</errorConditionFormula>
        <errorMessage>Atenção: Você não tem permissão para alterar o proprietário desta Oportunidade.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LossReasonRequired</fullName>
        <active>true</active>
        <description>Regra de validação para preenchimento do motivo de perda quando alterar a fase da oportunidade para fechada/perdida</description>
        <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Fechado/Perdido&quot;),
    ISBLANK(TEXT( LossReason__c )),
    $RecordType.Name = &quot;B2C&quot;
)</errorConditionFormula>
        <errorMessage>É obrigatório preencher o campo &quot;Motivo de Perda&quot; quando a Fase for &quot;Fechado/Perdido&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ObrigaCamposAprovacaoTermo</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
				ISPICKVAL(StageName, &apos;Termo aprovado&apos;),
				OR(
				    ISBLANK(TEXT(ContractStartType__c)),
								ISBLANK(ContractStartDate__c),
								ISBLANK(TEXT(DeliveryTerm__c))
    )
)</errorConditionFormula>
        <errorMessage>Atenção: Necessário preencher os campos  &apos;Início do contrato&apos;, &apos;Data de início do contrato&apos;, &apos;Renovação automática&apos;, &apos;Prazo do contrato&apos; para seguir com a Oportunidade.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ObrigaCamposFechadoPerdido</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
				ISPICKVAL(StageName, &apos;Fechado/Perdido&apos;),
				NOT(Bypass__c),
				OR(
								ISBLANK(TEXT(CancellationType__c)),
								ISBLANK(CancellationDetails__c )
				)
)</errorConditionFormula>
        <errorMessage>Atenção: Necessário preencher o &apos;Motivo de cancelamento&apos; e &apos;Descrição do cancelamento&apos; para finalizar a Oportunidade.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ObrigaCamposViabilidadeTecnica</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
    ISPICKVAL(StageName, &apos;Viabilidade técnica&apos;),
				ISBLANK(TEXT(ViabilityType__c))
)</errorConditionFormula>
        <errorDisplayField>ViabilityType__c</errorDisplayField>
        <errorMessage>Atenção: Necessário preencher o &apos;Tipo de Viabilidade&apos; para seguir com a Oportunidade.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ObrigaTipoEmNegociacao</fullName>
        <active>false</active>
        <description>W0382 - exige o campo Tipo na fase Em negociacao. Ativar apos backfill.</description>
        <errorConditionFormula>AND(
    RecordTypeName__c = &apos;B2B&apos;,
    TEXT(StageName) = &apos;Em negociação&apos;,
    ISBLANK(TEXT(Type)),
    NOT(Bypass__c)
)</errorConditionFormula>
        <errorMessage>Atencao: informe o campo Tipo antes de prosseguir.</errorMessage>
    </validationRules>
</CustomObject>